# ChangeLog for net-ftp/scythia
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-ftp/scythia/ChangeLog,v 1.1 2009/12/15 11:14:47 ssuominen Exp $

*scythia-0.9.3_p2 (15 Dec 2009)

  15 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  +scythia-0.9.3_p2.ebuild:
  Initial commit.
