@@ -1,6 +1,11 @@
 # ChangeLog for net-ftp/scythia
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/scythia/ChangeLog,v 1.1 2009/12/15 11:14:47 ssuominen Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/scythia/ChangeLog,v 1.2 2010/04/09 14:36:15 ssuominen Exp $
+
+  09 Apr 2010; Samuli Suominen <ssuominen@gentoo.org>
+  scythia-0.9.3_p2.ebuild:
+  Fix documentation directory wrt #314097 by Diego E. Pettenò. Port to
+  qt4-r2 eclass, update icon cache, ...
 
 *scythia-0.9.3_p2 (15 Dec 2009)
 
